--- a/css/blocks/btn.css
+++ b/css/blocks/btn.css
@@ -7,12 +7,12 @@
   font-weight: bold;
   font-size: 14px;
   text-transform: uppercase;
-  transition: 0.5s;
+  transition: background 0.5s;
 }
 
 .btn:hover {
   background: #741BBA;
-  transition: 0.5s;
+  transition: background 0.5s;
 }
 
 .btn__card {
@@ -26,7 +26,7 @@
   font-size: 14px;
   text-transform: uppercase;
   border: 1px solid transparent;
-  transition: 0.5s;
+  transition: background 0.5s;
 }
 
 .btn__card:hover {
@@ -36,7 +36,7 @@
   border-color: #8F00FF;
   /* border: 1px solid #8F00FF; */
   border-radius: 4px;
-  transition: 0.5s;
+  transition: background 0.5s;
 }
 
 .btn__card--black {
@@ -50,7 +50,7 @@
   font-weight: bold;
   font-size: 14px;
   text-transform: uppercase;
-  transition: 0.5s;
+  transition: background 0.5s;
 }
 
 .btn__card--black:hover {
@@ -58,7 +58,7 @@
   color: #2B2B2B;
   background: #fff;
   border-color: #2B2B2B;
-  transition: 0.5s;
+  transition: background 0.5s;
 }
 
 
@@ -75,7 +75,7 @@
   font-weight: bold;
   font-size: 14px;
   text-transform: uppercase;
-  transition: 0.5s;
+  transition: background 0.5s;
 }
 
 .btn__card--services--white {
@@ -91,13 +91,13 @@
   font-weight: bold;
   font-size: 14px;
   text-transform: uppercase;
-  transition: 0.5s;
+  transition: background 0.5s;
 }
 
 .btn__card--services--white:hover {
   background: #8F00FF;
   color: #fff;
-  transition: 0.5s;
+  transition: background 0.5s;
 }
 
 .btn__card--services--purple {
@@ -113,7 +113,7 @@
   font-weight: bold;
   font-size: 14px;
   text-transform: uppercase;
-  transition: 0.5s;
+  transition: background 0.5s;
 }
 
 .btn__card--services--purple:hover {
@@ -123,7 +123,7 @@
   border-color: #8F00FF;
   border-radius: 4px;
   border-width: 1px;
-  transition: 0.5s;
+  transition: background 0.5s;
 }
 
 .btn__card--last {
@@ -138,11 +138,11 @@
   font-weight: bold;
   font-size: 14px;
   text-transform: uppercase;
-  transition: 0.5s;
+  transition: background 0.5s;
 }
 
 .btn__card--white:hover {
   background: #8F00FF;
   color: #fff;
-  transition: 0.5s;
+  transition: background 0.5s;
 }
