--- a/css/blocks/form.css
+++ b/css/blocks/form.css
@@ -1,18 +1,21 @@
 .form__row {
   display: flex;
   margin-bottom: 30px;
-  /* flex: 1; */
 }
 
 .form__input {
   flex: 1;
   margin-right: 30px;
   border-radius: 4px;
-  border: none;
+  border: 2px solid transparent;
   background: #fff;
   padding: 22px 30px;
   font-size: 18px;
-  /* color: #ccc; */
+}
+
+.form__input:focus {
+  outline: none;
+  border-color: #8F00FF;
 }
 
 .form__input::placeholder {
