--- a/css/blocks/nav.css
+++ b/css/blocks/nav.css
@@ -16,6 +16,7 @@
 .menu__link {
   font-size: 16px;
   text-decoration: none;
+  transition: color 0.2s;
 }
 
 .menu__link--active {
@@ -24,4 +25,5 @@
 
 .menu__link:hover {
   color: #8F00FF;
+  transition: color 0.2s;
 }
